# smp_ws

./: .gitignore  README.md
src/camera/: package.xml  setup.py
src/camera/camera/: color_node.py
src/interface_arduino/: CMakeLists.txt  package.xml
src/interface_arduino/msg/: Analog.msg  AnalogFloat.msg  Digital.msg  SensorState.msg
src/learning_py/: package.xml  setup.cfg  setup.py
src/learning_py/learning_py/: node_py.py
src/nav2/: CMakeLists.txt  package.xml
src/nav2/launch/: navigation2.launch.py  odom_ekf.launch.py
src/qx_cartographer/: CMakeLists.txt  package.xml
src/qx_cartographer/launch/: cartographer.launch.py
src/qx_urdf/: package.xml  setup.cfg  setup.py
src/qx_urdf/launch/: car_xacro_launch.py  qx_urdf_launch.py
src/qx_urdf/rviz/: car.rviz  urdf.rviz
src/qx_urdf/urdf/urdf/: qianxun.urdf
src/qx_urdf/urdf/xacro/: car.xacro
src/robot_description/: package.xml  setup.py
src/robot_description/launch/: display_rviz2.launch.py  gazebo.launch.py  qx_gazebo.launch.py  qx_rviz2.launch.py
src/robot_description/rviz/: qx.rviz
src/robot_description/xacro/: qianxun.xacro  qx_laser_gazebo.xacro  qx_move.xacro
src/ros2_arduino_firmware/: CMakeLists.txt  package.xml
src/ros2_arduino_firmware/src/libraries/ROSArduinoBridge/: ROSArduinoBridge.ino  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
src/ros2_arduino_python/: package.xml  setup.cfg  setup.py
src/ros2_arduino_python/config/: arduino_params.yaml
src/ros2_arduino_python/launch/: arduino.launch.py  arduino_launch.py
src/ros2_arduino_python/ros2_arduino_python/: arduino_node.py
src/ros2_arduino_python/sdk/: arduino_driver.py  arduino_sensors.py  base_controller.py
src/sllidar_ros2/launch/: view_sllidar_launch.py
src/sllidar_ros2/sdk/src/arch/linux/: net_socket.cpp
src/sllidar_ros2/src/: sllidar_node.cpp
src/voice/: CMakeLists.txt  package.xml
src/voice/launch/: voice_assistant_launch.py  voice_launch.py  voice_repeat_launch.py
src/voice/src/: iat_publish.cpp  tts_subscribe.cpp  voice_assistant.cpp
